--- a/rosrust/Cargo.toml
+++ b/rosrust/Cargo.toml
@@ -18,11 +18,12 @@ hostname = "0.3.1"
 regex = "1.5.4"
 serde = "1.0.127"
 serde_derive = "1.0.127"
-xml-rpc = "0.0.12"
+xml-rpc = {path = "../../xml-rpc-rs"}
 yaml-rust = "0.4.5"
 crossbeam = "0.8.1"
 socket2 = "0.4.1"
 colored = "2.0.0"
+libc = "0.2"
 
 [dependencies.ros_message]
 path = "../ros_message"
