--- a/rosrust/Cargo.toml
+++ b/rosrust/Cargo.toml
@@ -24,6 +24,7 @@ crossbeam = "0.8.1"
 socket2 = "0.4.1"
 colored = "2.0.0"
 libc = "0.2"
+timeout-readwrite = "0.4.0"
 
 [dependencies.ros_message]
 path = "../ros_message"
