--- a/rosrust/Cargo.toml
+++ b/rosrust/Cargo.toml
@@ -25,6 +25,7 @@ socket2 = "0.4.1"
 colored = "2.0.0"
 libc = "0.2"
 timeout-readwrite = "0.4.0"
+thread-priority = "1.1.0"
 
 [dependencies.ros_message]
 path = "../ros_message"
